# agentshield

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
agentshield/: __init__.py  config.py
agentshield/attacks/: __init__.py  base.py  direct_injection.py  indirect_injection.py  multi_turn_escalation.py  runner.py  tool_misuse.py
agentshield/detectors/: __init__.py  base.py  input_classifier.py  output_classifier.py  pipeline.py  tool_auditor.py  trajectory_monitor.py
agentshield/evaluation/: __init__.py  benchmarks.py  figures.py  judge.py  metrics.py  report_generator.py
agentshield/simulation/: __init__.py  agent_base.py  conversation.py  llm_agent.py  mock_agent.py  mock_memory.py  mock_tools.py
agentshield/threat_model/: __init__.py  bioteam_surfaces.py  risk_matrix.py  stride.py
docs/: architecture.md  attack_catalogue.md  evaluation_report.md  threat_model.md
scripts/: export_hf_dataset.py  run_ablation.py  run_attacks.py  run_detection.py  run_evaluation.py  run_threat_model.py
tests/: __init__.py  test_attacks.py  test_detectors.py  test_pipeline.py
