[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentshield"
version = "0.1.0"
description = "Security audit framework for agentic AI systems with STRIDE threat modeling, attack simulation, and detection pipeline"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "JangKeun Kim", email = "jak4013@med.cornell.edu"}]
keywords = [
    "ai-safety", "prompt-injection", "agentic-ai", "security-audit",
    "stride", "threat-modeling", "multi-agent", "content-moderation",
    "red-teaming", "llm-security",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]

dependencies = [
    "pydantic>=2.0,<3.0",
    "anthropic>=0.25",
    "transformers>=4.40",
    "torch>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "tqdm>=4.66",
]

[project.urls]
Homepage = "https://github.com/jang1563/agentshield"
Repository = "https://github.com/jang1563/agentshield"
Issues = "https://github.com/jang1563/agentshield/issues"

[project.optional-dependencies]
bioguard = ["constitutional-bioguard"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.setuptools.packages.find]
include = ["agentshield*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
